--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Uji Kompetensi/Temp/FSTimeGet-4baf56c20cd5f724288dc821c4f996c7
+Uji Kompetensi/Temp/FSTimeGet-4e73f56af6f16ed45b182610f7646526
+Uji Kompetensi/Temp/FSTimeGet-7f4f552d48cbe8147b2bfd297f917a29
+Uji Kompetensi/Temp/FSTimeGet-9ce3742b7eda6d14ea3364875caa490e
+Uji Kompetensi/Temp/FSTimeGet-cc64ac11f2e4f644d8327c7a3dd6f311
+Uji Kompetensi/Temp/FSTimeGet-e68083a405058504d9445f1190c2beca
+Uji Kompetensi/Temp/UnityLockfile
+Uji Kompetensi/Temp/workerlic
